--- a/web3/package.json
+++ b/web3/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@thirdweb-dev/contracts": "^3",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "ethers": "^5.0.0",
+    "web3": "^1.9.0"
   }
 }
