--- a/web3/package.json
+++ b/web3/package.json
@@ -6,12 +6,13 @@
     "release": "npx thirdweb@latest release"
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.2.2",
+    "ethers": "^5.0.0",
     "hardhat": "^2.10.1"
   },
   "dependencies": {
     "@thirdweb-dev/contracts": "^3",
     "dotenv": "^16.0.3",
-    "ethers": "^5.0.0",
     "web3": "^1.9.0"
   }
 }
