--- a/web3/package.json
+++ b/web3/package.json
@@ -11,6 +11,7 @@
     "hardhat": "^2.10.1"
   },
   "dependencies": {
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
     "@thirdweb-dev/contracts": "^3",
     "dotenv": "^16.0.3",
     "web3": "^1.9.0"
